Add parser and modified binary file for parsing

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     ],
     "bin": [
         "bin/gendiff.php"
-    ]
+    ],
+    "autoload": {
+        "files": [
+            "src/parser.php"
+        ]
+    }
 }
