--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0",
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
@@ -22,7 +23,8 @@
     ],
     "autoload": {
         "files": [
-            "src/parser.php"
+            "src/parser.php",
+            "src/Differ/Differ.php"
         ]
     }
 }
