--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0",
         "docopt/docopt": "^1.0",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^7.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
