--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "autoload": {
         "files": [
             "src/parser.php",
-            "src/Differ/Differ.php"
+            "src/Differ/Differ.php",
+            "src/Differ/Translator.php"
         ]
     }
 }
