Add module Parsers with Parser.php (previously parser.php). Fix namespaces.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "autoload": {
         "files": [
-            "src/parser.php",
+            "src/Parsers/Parser.php",
             "src/Differ/Differ.php",
             "src/Differ/Translator.php"
         ]
