--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,11 @@
     "autoload": {
         "files": [
             "src/Parser.php",
-            "src/Formatters/Stylish.php",
             "src/Differ/Differ.php",
-            "src/Differ/Translator.php"
+            "src/Differ/Translator.php",
+            "src/Formatters.php",
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php"
         ]
     }
 }
