Add new formatter Json.php

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "src/Differ/Translator.php",
             "src/Formatters.php",
             "src/Formatters/Stylish.php",
-            "src/Formatters/Plain.php"
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php"
         ]
     }
 }
