Add version of utility

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "hexlet/code",
     "description": "Util for search different between data structure. With different formats of files.",
     "type": "project",
+    "version": "1.0.0",
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0",
         "docopt/docopt": "^1.0",
